tests/paczka1/small_fuzzy/20731105.err
Error in line 3: uPp1 A565 59,3
Error in line 1: 1AW11hy S833 15,4
Error in line 5: 1AW11hy A256 9,1
Error in line 4: uPp1 A552 54,0
Error in line 10: uPp1 A256 20,1
